--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
+header {
+  height: 150px;
+  background-color: rgb(230, 226, 226);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.big-div {
+  display: flex;
+  justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
+  margin: 50px 0;
+  height: 500px;
+  /* background-color: aqua; */
   display: flex;
   flex-direction: column;
+  width: 80%;
+}
+
+.tab {
+  height: 400px;
+  /* border: 2px red solid; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  line-height: 20px;
+  border-radius: 10px;
+  background-color: aqua;
+}
+
+.checkbox {
+  display: flex;
+  align-items: center;
+  line-height: 30px;
+}
+
+.checkbox p {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.line-trought {
+  text-decoration-line: line-through;
+  display: flex;
+}
+
+.ok {
+  text-decoration: none;
+}
+
+.submit {
+  margin: 0 auto;
+  width: 60%;
+  margin-top: 50px;
+  border: 2px red solid;
+  height: 10%;
+  border-radius: 10px;
+  box-shadow: 3px 3px 3px black;
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  margin-top: 30px;
+  height: 8%;
+  border: 2px red dotted;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heart {
+  /* border: 2px blue solid; */
+  height: 80px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5rem;
 }
