--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ form {
   color: white;
 }
 
-input {
+.input {
   margin-top: 30px;
   height: 8%;
   border: 2px red dotted;
@@ -82,4 +82,8 @@ input {
   justify-content: center;
   align-items: center;
   font-size: 5rem;
+}
+
+.icon {
+  color: rgb(222, 11, 46);
 }
